# minecraft_mod_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  dll_entry.cpp  readme.md
dependencies/jni/: CMakeLists.txt
dependencies/jni/include/: jvmti.h
dependencies/jni/lib/: jvm.lib
jni/: CMakeLists.txt  java.hpp
jni/java/lang/: ClassLoader.hpp  Thread.hpp
jni/java/util/: Map.hpp  Set.hpp
minecraft_sdk/: CMakeLists.txt  minecraft_sdk.cpp
minecraft_sdk/include/: minecraft_sdk.hpp
srcs/: CMakeLists.txt  instance.cpp  menu.cpp
srcs/include/: instance.hpp  menu.hpp  utils.hpp
